--- a/www/index.html
+++ b/www/index.html
@@ -32,16 +32,15 @@
       </ion-nav-back-button>
     </ion-nav-bar>-->
     <div layout="column" layout-fill>
-      <md-toolbar class="md-default-theme" layout="row">
+      <!--<md-toolbar class="md-default-theme" layout="row">
         <div class="md-toolbar-tools">
           <span>City Hall</span>
-          <!-- fill up the space between left and right area -->
           <span flex></span>
           <md-button>
             Help
           </md-button>
         </div>
-      </md-toolbar>
+      </md-toolbar>-->
       <md-content>
         <ion-nav-view></ion-nav-view>
       </md-content>
