add menu & menu toggle, clean up toolbar

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
+    <!-- roboto -->
+    <link href="lib/roboto-fontface/css/roboto-fontface.css" rel="stylesheet">
+
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
 
@@ -38,7 +41,7 @@
           </md-button>
         </div>
       </md-toolbar>-->
-      <md-content>
+      <md-content id="main">
         <ion-nav-view></ion-nav-view>
       </md-content>
     </div>
