--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
           <h1 class="md-toolbar-tools">City Hall</h1>
         </md-toolbar>
         <md-content layout-padding ng-controller="MenuCtrl">
-          <md-button ng-click="go('motions.upcoming')" class="md-primary">
+          <md-button ng-click="go('motions.trending')" class="md-primary">
             Motions
           </md-button>
           <md-button ng-click="go('councillors.roster')" class="md-primary">
