add councillor attendance tab

--- a/www/index.html
+++ b/www/index.html
@@ -36,9 +36,11 @@
           <md-button ng-click="go('motions.trending')" class="md-primary">
             Motions
           </md-button>
+          <br/>
           <md-button ng-click="go('councillors.roster')" class="md-primary">
             Councillors
           </md-button>
+          <br/>
           <md-button ng-click="close()" class="md-primary">
             Close
           </md-button>
@@ -47,6 +49,9 @@
       <md-content id="main">
         <ui-view></ui-view>
       </md-content>
+      <button class="md-fab md-button md-default-theme" ng-transclude="" aria-label="Eat cake">
+        <md-icon md-svg-src="img/icons/add.svg" class="ng-scope ng-isolate-scope md-default-theme" aria-hidden="true"></md-icon>
+      </button>
     </div>
   </body>
 </html>
