add wards frontend

--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,10 @@
             Councillors
           </md-button>
           <br/>
+          <md-button ng-click="go('wards.list')" class="md-primary">
+            Wards
+          </md-button>
+          <br/>
           <md-button ng-click="close()" class="md-primary">
             Close
           </md-button>
@@ -49,9 +53,9 @@
       <md-content id="main">
         <ui-view></ui-view>
       </md-content>
-      <button class="md-fab md-button md-default-theme" aria-label="Eat cake">
+      <!--<button class="md-fab md-button md-default-theme" aria-label="Eat cake">
         <md-icon md-svg-src="img/icons/add.svg" class="ng-scope ng-isolate-scope md-default-theme" aria-hidden="true"></md-icon>
-      </button>
+      </button>-->
     </div>
   </body>
 </html>
