add settings pane, update services providing wards and motions

--- a/www/index.html
+++ b/www/index.html
@@ -45,6 +45,10 @@
             Wards
           </md-button>
           <br/>
+          <md-button ng-click="go('settings')" class="md-primary">
+            Settings
+          </md-button>
+          <br/>
           <md-button ng-click="close()" class="md-primary">
             Close
           </md-button>
