--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
   </head>
   <body ng-app="hall">
     <div layout="column" layout-fill ng-controller="AppCtrl">
-      <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="menu" md-is-locked-open="$mdMedia('gt-md')">
+      <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="menu">
         <md-toolbar class="md-theme-indigo">
           <h1 class="md-toolbar-tools">City Hall</h1>
         </md-toolbar>
