--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="lib/angular-aria/angular-aria.js"></script>
     <script src="lib/angular-animate/angular-animate.js"></script>
+    <script src="lib/angular-touch/angular-touch.js"></script>
     <script src="lib/angular-material/angular-material.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -23,6 +24,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/directives.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
