--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <!-- TODO: Make this more strict -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://tocityhall-api*.herokuapp.com http://www1.toronto.ca">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://tocityhall-api.herokuapp.com http://www1.toronto.ca http://localhost">
     <title>Toronto City Hall</title>
 
     <!-- roboto -->
