--- a/www/index.html
+++ b/www/index.html
@@ -19,12 +19,15 @@
     <script src="lib/angular-aria/angular-aria.js"></script>
     <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/angular-material/angular-material.js"></script>
+    <script src="lib/swagger-angular-client/dist/swagger-angular-client.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/tocityhall.js"></script>
+    <script src="js/data.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
