--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <script src="lib/angular-aria/angular-aria.js"></script>
     <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/angular-material/angular-material.js"></script>
+    <script src="lib/angular-filter/dist/angular-filter.js"></script>
     <script src="lib/swagger-angular-client/dist/swagger-angular-client.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
