Allow using APIs with fidd basePath's.

--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <!-- TODO: Make this more strict -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://tocityhall-api.herokuapp.com http://www1.toronto.ca http://localhost">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://tocityhall-api.herokuapp.com https://tocityhall-api-staging.herokuapp.com http://www1.toronto.ca http://localhost">
     <title>Toronto City Hall</title>
 
     <!-- roboto -->
@@ -29,6 +29,7 @@
     <script src="js/app.js"></script>
     <script src="js/tocityhall.js"></script>
     <script src="js/data.js"></script>
+    <script src="js/constants.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
